<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:hint="@string/email"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="@color/grey"
                    app:boxStrokeWidth=".5dp"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:minHeight="38dp"
                        android:paddingHorizontal="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:hint="@string/password"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="@color/grey"
                    app:boxStrokeWidth=".5dp"
                    app:layout_constraintTop_toBottomOf="@id/email_layout">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:minHeight="38dp"
                        android:paddingHorizontal="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="38dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@id/gotoRegister"
                    app:rippleColor="@color/white" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginHorizontal="16dp"
                    android:elevation="16dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/login"
                    app:layout_constraintEnd_toEndOf="@id/login"
                    app:layout_constraintTop_toTopOf="@id/login"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/gotoRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/dont_have_an_account_register"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>