<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ali.hrhera.auth.features.register.view.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/register"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:hint="@string/name"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/grey"
                        app:boxStrokeWidth=".5dp"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/title">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/name"
                            app:errorText="@{viewModel.nameError}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start"
                            android:minHeight="38dp"
                            android:paddingHorizontal="8dp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/email"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/grey"
                        app:boxStrokeWidth=".5dp"
                        app:layout_constraintTop_toBottomOf="@id/title">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/email"
                            app:errorText="@{viewModel.emailError}"

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start"
                            android:inputType="textEmailAddress"
                            android:minHeight="38dp"
                            android:paddingHorizontal="8dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/phone"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/grey"
                        app:boxStrokeWidth=".5dp"
                        app:layout_constraintTop_toBottomOf="@id/title">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/phone"
                            app:errorText="@{viewModel.phoneError}"

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start"
                            android:inputType="phone"
                            android:minHeight="38dp"
                            android:paddingHorizontal="8dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginTop="32dp"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/grey"
                        app:boxStrokeWidth=".5dp"
                        app:layout_constraintTop_toBottomOf="@id/email_layout">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start"
                            android:minHeight="38dp"
                            app:errorText="@{viewModel.passwordError}"
                            android:paddingHorizontal="8dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="38dp"
                    android:layout_marginBottom="32dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/Register"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:rippleColor="@color/white" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginHorizontal="16dp"
                    android:elevation="16dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="@{viewModel.loading?View.VISIBLE:View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/register"
                    app:layout_constraintEnd_toEndOf="@id/register"
                    app:layout_constraintTop_toTopOf="@id/register"
                    tools:visibility="visible" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>